tests/spec/compile-pass/039_array_clone_default_allocator.zn
// category: compile-pass
// profile: hosted
// purpose: Array clone can use the profile default allocator and returns an owned Array

module tests.pass.arrayCloneDefaultAllocator;

fn cloneBytes(bytes: Array<U8>) -> Array<U8> {
    return bytes.clone();
}
