tests/spec/compile-fail/031_array_clone_without_allocator.zn
// category: compile-fail
// profile: freestanding
// purpose: Array clone must make allocation explicit

module tests.fail.arrayCloneWithoutAllocator;

fn bad(bytes: Array<U8>) -> Array<U8> {
    return bytes.clone(); // expected-error: Array clone requires allocator and returns Result
}
